--- a/package.json
+++ b/package.json
@@ -12,27 +12,31 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.0",
+    "@angular/cli": "~12.1.4",
     "@angular/common": "~12.1.0",
     "@angular/compiler": "~12.1.0",
-    "@angular/cli": "~12.1.4",
     "@angular/compiler-cli": "~12.1.0",
     "@angular/core": "~12.1.0",
     "@angular/forms": "~12.1.0",
+    "@angular/localize": "~12.1.0",
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "request": "^2.81.0",
     "rxjs": "~6.6.0",
     "sqlite3": "^5.0.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4",
-    "typescript": "~4.3.2"
+    "typescript": "~4.3.2",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.4",
     "@angular/cli": "~12.1.4",
     "@angular/compiler-cli": "~12.1.0",
+    "@angular/localize": "^12.1.5",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
@@ -42,7 +46,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.2"
-
   },
   "engines": {
     "node": "14.15.4",
