--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.0",
+    "@angular/cdk": "^12.2.13",
     "@angular/cli": "~12.1.4",
     "@angular/common": "~12.1.0",
     "@angular/compiler": "~12.1.0",
@@ -19,6 +20,7 @@
     "@angular/core": "~12.1.0",
     "@angular/forms": "~12.1.0",
     "@angular/localize": "~12.1.0",
+    "@angular/material": "^12.2.13",
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
