--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@angular/router": "~12.1.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^6.1.1",
     "request": "^2.81.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
