--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "angular-express",
+  "name": "the-wishlist",
+  "author": "Candas Kilic",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
