--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node app.js",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -29,6 +29,7 @@
     "bootstrap": "^4.5.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "lint": "^0.7.0",
     "mongoose": "^6.1.1",
     "request": "^2.81.0",
     "rxjs": "~6.6.0",
