--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "lint": "^0.7.0",
     "mongoose": "^6.1.1",
+    "nodemon": "^2.0.18",
     "request": "^2.81.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -50,6 +51,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "prettier": "2.7.1",
     "typescript": "~4.3.2"
   },
   "engines": {
