--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.1.0",
+    "@angular/animations": "~13.3.11",
     "@angular/cdk": "^12.2.13",
-    "@angular/cli": "~12.1.4",
-    "@angular/common": "~12.1.0",
-    "@angular/compiler": "~12.1.0",
-    "@angular/compiler-cli": "~12.1.0",
-    "@angular/core": "~12.1.0",
-    "@angular/forms": "~12.1.0",
-    "@angular/localize": "~12.1.0",
+    "@angular/cli": "~13.3.9",
+    "@angular/common": "~13.3.11",
+    "@angular/compiler": "~13.3.11",
+    "@angular/compiler-cli": "~13.3.11",
+    "@angular/core": "~13.3.11",
+    "@angular/forms": "~13.3.11",
+    "@angular/localize": "~13.3.11",
     "@angular/material": "^12.2.13",
-    "@angular/platform-browser": "~12.1.0",
-    "@angular/platform-browser-dynamic": "~12.1.0",
-    "@angular/router": "~12.1.0",
+    "@angular/platform-browser": "~13.3.11",
+    "@angular/platform-browser-dynamic": "~13.3.11",
+    "@angular/router": "~13.3.11",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.0",
     "dotenv": "^10.0.0",
@@ -35,14 +35,11 @@
     "request": "^2.81.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "typescript": "~4.3.2",
+    "typescript": "~4.6.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.4",
-    "@angular/cli": "~12.1.4",
-    "@angular/compiler-cli": "~12.1.0",
-    "@angular/localize": "^12.1.5",
+    "@angular-devkit/build-angular": "~13.3.9",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
@@ -51,8 +48,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "prettier": "2.7.1",
-    "typescript": "~4.3.2"
+    "prettier": "2.7.1"
   },
   "engines": {
     "node": "14.15.4",
