--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.2.6",
-    "@angular/cdk": "^13.3.9",
-    "@angular/cli": "~13.3.9",
-    "@angular/common": "~14.2.6",
-    "@angular/compiler": "~14.2.6",
-    "@angular/compiler-cli": "~14.2.6",
-    "@angular/core": "~14.2.6",
-    "@angular/forms": "~14.2.6",
-    "@angular/localize": "~14.2.6",
-    "@angular/material": "^13.3.9",
-    "@angular/platform-browser": "~14.2.6",
-    "@angular/platform-browser-dynamic": "~14.2.6",
-    "@angular/router": "~14.2.6",
+    "@angular/animations": "^14.2.6",
+    "@angular/cdk": "^14.2.5",
+    "@angular/cli": "^14.2.6",
+    "@angular/common": "^14.2.6",
+    "@angular/compiler": "^14.2.6",
+    "@angular/compiler-cli": "^14.2.6",
+    "@angular/core": "^14.2.6",
+    "@angular/forms": "^14.2.6",
+    "@angular/localize": "^14.2.6",
+    "@angular/material": "^14.2.5",
+    "@angular/platform-browser": "^14.2.6",
+    "@angular/platform-browser-dynamic": "^14.2.6",
+    "@angular/router": "^14.2.6",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "bootstrap": "^4.5.0",
     "dotenv": "^10.0.0",
@@ -39,7 +39,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.9",
+    "@angular-devkit/build-angular": "^14.2.6",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
