--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^14.2.6",
     "@angular/router": "^14.2.6",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^4.5.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
